[package]
name = "numeruno_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-http = {version="0.5", features=["fs"]}

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1.0.80"
httpc-test = "0.1.9"
